force-app/main/default/objects/User_Story__c/fields/ADO_Ticket_URL__c.field-meta.xml
<CustomField>
    <fullName>ADO_Ticket_URL__c</fullName>
    <label>Azure DevOps Ticket URL</label>
    <type>Text</type>
    <formula>IF(ISBLANK(ADO_Ticket_Number__c), null, HYPERLINK(Sprint__r.Project__r.ADO_Base_URL__c &amp; ADO_Ticket_Number__c, ADO_Ticket_Number__c, &quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>