force-app/main/default/objects/User_Story__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stories_as_Developer</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>