force-app/main/default/objects/User_Story__c/fields/JIRA_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Ticket_Number__c</fullName>
    <label>JIRA Ticket Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>