force-app/main/default/objects/User_Story__c/fields/JIRA_Ticket_URL__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Ticket_URL__c</fullName>
    <label>JIRA Ticket URL</label>
    <type>Text</type>
    <formula>IF(ISBLANK(JIRA_Ticket_Number__c), null, HYPERLINK($Label.JIRA_Base_URL &amp; JIRA_Ticket_Number__c, JIRA_Ticket_Number__c, &quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>