force-app/main/default/objects/User_Story__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developing</fullName>
                <default>true</default>
                <label>Developing</label>
            </value>
            <value>
                <fullName>Ready For DMPT</fullName>
            </value>
            <value>
                <fullName>DMPT Deployed</fullName>
            </value>
            <value>
                <fullName>Ready For Stage</fullName>
            </value>
            <value>
                <fullName>Stage Deployed</fullName>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
            <value>
                <fullName>Production Deployed</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>