force-app/main/default/objects/User_Story__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stories_as_Tester</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>